# misc-python

./: .gitignore
2025Analythic/: B.py  input.txt  pyproject.toml
avito/: README.md  main.ipynb  pyproject.toml  ranking_tutorial.ipynb
avito/PairLogit/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/PairLogit/learn/: events.out.tfevents
avito/PairLogit/test/: events.out.tfevents
avito/QuerySoftMax/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/QuerySoftMax/learn/: events.out.tfevents
avito/QuerySoftMax/test/: events.out.tfevents
avito/RMSE/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/RMSE/learn/: events.out.tfevents
avito/RMSE/test/: events.out.tfevents
avito/RMSE_weigths/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/RMSE_weigths/learn/: events.out.tfevents
avito/RMSE_weigths/test/: events.out.tfevents
avito/YetiRank/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/YetiRank/learn/: events.out.tfevents
avito/YetiRank/test/: events.out.tfevents
avito/YetiRankPairwise/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
avito/YetiRankPairwise/learn/: events.out.tfevents
avito/YetiRankPairwise/test/: events.out.tfevents
codeforces/: watermelon.py
leetcode/: 658findKClosestElements.py
misc/: Untitled.ipynb  frac.py  main.py  pyproject.toml  yandex.py
notebooks/: 07_classes.ipynb  08_inheritance_and_some_decorators.ipynb  09_closures_decorators.ipynb  09_namespaces_scopes.ipynb  hw3.ipynb  lecture05.ipynb  lecture06.ipynb
shadintens/: 3.py  Untitled0.ipynb
tbank/: main.py  (+2 more)
yandex/2025Analythic/: B.py  C.py  Untitled.ipynb  inputB.txt  inputC.txt  newC.py  oldC.py  pyproject.toml
yandex/2025Analythic/.virtual_documents/: Untitled.ipynb
yandex/ABweek/: AB Week. Day 1.ipynb  AB Week. Day 2.ipynb  main.py  pyproject.toml
yandex/ABweek/homework/: utils.py
(+7 files in other folders)
