[project]
name = "avitotask21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "catboost>=1.2.8",
    "emoji>=2.15.0",
    "fastparquet>=2025.12.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.1",
    "transformers>=5.0.0",
    "xgboost>=3.1.3",
]
