[project]
name = "2025Analythic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "jupyter>=1.1.1",
  "jupyterlab-lsp>=5.2.0",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "python-lsp-server>=1.13.1",
  "scipy>=1.16.2",
  "seaborn>=0.13.2",
]
